collapsed buttons little fix. same size now

--- a/clientMath/src/styles.css
+++ b/clientMath/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-  background-color: #04c582;;
+  background-color: #04c582;
 }
 
 input.form-control,input.form-control:focus{
